--- a/2nd_year_paper.tex
+++ b/2nd_year_paper.tex
@@ -259,9 +259,9 @@ In our environment (with a slight change of notation) an outcome is specified by
 \mathcal{T}_i(\mathbf{p}) &= \frac{c}{n} + p_{i+2} - p_{i+1} \label{oc_t} 
 \end{align}	
 	
-\noindent Note that the subscript \(i + j\) is understood to be a modulo operation, \(n+j= j\), and \(c\) is once again the marginal cost of the public good.
+\noindent Note that the subscript \(i + j\) is understood to be a modulo operation, \(n+j= j\), and \(c\) is once again the marginal cost of the public good (this follows the mechanism design in Walker (1981)).
 
- This mechanism defines a game form: when preferences are added to it a game is induced. The outcome functions \ref{oc_x} and \ref{oc_t} each are designed to influence what strategies are used to satisfy these preferences in such a game. First, when all other messages \(p_{-j}\) are taken as given, \ref{oc_x} allows any individual message \(p_j\) to demand a certain level of the public good: no matter what function results from \(\sum_{i \neq j} p_i(m)\), the addition of \(p_j\) can create an integrand \(\sum_{i=1}^n p_i(m)\) such that \(\mathcal{X}(\mathbf{p})\) produces any outcome \(x\) a individual \(j\) desires. Second, \ref{oc_t} states that the tax schedule that will be administered to any individual does not depend on their own message. In tandem, these two outcome functions mean that a utility optimizing agent playing a game induced by this mechanism only has one margin of optimization, the public good. I now add the preferences from the economic setting described in section \ref{CLE} in order to induce and analyze the resulting game.
+ This mechanism defines a game form: when preferences are added to it a game is induced. The outcome functions \ref{oc_x} and \ref{oc_t} each are designed to influence what strategies are used to satisfy these preferences in such a game. First, when all other messages \(p_{-j}\) are taken as given, \ref{oc_x} allows any individual message \(p_j\) to demand a certain level of the public good: no matter what function results from \(\sum_{i \neq j} p_i(m)\), the addition of \(p_j\) can create an integrand \(\sum_{i=1}^n p_i(m)\) such that \(\mathcal{X}(\mathbf{p})\) produces any outcome \(x\) an individual \(j\) desires. Second, \ref{oc_t} states that the tax schedule that will be administered to any individual does not depend on their own message. In tandem, these two outcome functions mean that a utility optimizing agent playing a game induced by this mechanism only has one margin of optimization, the public good. I now add the preferences from the economic setting described in section \ref{CLE} in order to induce and analyze the resulting game.
 
 \begin{proposition}
 At any Nash equilibrium induced by our mechanism, any equilibrium outcome \((\vec{\tau}, x)\) coincides with a generalized Lindahl outcome and is Pareto optimal.
@@ -279,43 +279,61 @@ To be a generalized Lindahl outcome, each individual must be given a personal ta
 \noindent or
 
 \begin{align*}
-&\max_{p_i(x)} ~ u_i \left( x, \omega_i - \int_0^x \left[ \frac{\beta}{n} + p_{i+2}(t) - p_{i+1}(t) \right] dt \right) \numberthis 
+&\max_{p_i(x)} ~ u_i \left( x, \omega_i - \int_0^x \left[ \frac{c}{n} + p_{i+2}(t) - p_{i+1}(t) \right] dt \right) \numberthis 
 \\
-&s.t.~ x = \argmax_{t \geq 0} \int_o^t \sum_{i=1}^n p_i(m) dm
+&s.t.~ x = \argmax_{t \geq 0} \int_o^t \sum_{i=1}^n p_i(m) dm \numberthis \label{x_cons}
 \end{align*}
 
-The problem can be simplified further, as a choice over \(x\). The objective function does not \textit{directly} depend on an individual's choice of message \(p_i\), but the amount of the public good provided does, via the constraint. Given any set of messages submitted by other individuals, a single individual's choice of \(p_i\) can demand any level of \(x\), and only by this level of \(x\) does \(p_i\) affect their utility.  
+The problem can be simplified further, as a choice over \(x\). The objective function does not \textit{directly} depend on an individual's choice of message \(p_i\), but the amount of the public good provided does, via the constraint \ref{x_cons}: if a player understands x is chosen according to \ref{x_cons}, then they understand that the following first order condition \(\sum_{i=1}^n p_i(x) = 0\) must hold. Given any set of messages submitted by other individuals, a single individual can submit a \(p_i\) such that the maximumizing argument of \ref{x_cons} is any positive real number, \(x\). Only by this level of \(x\) does \(p_i\) affect their utility.  
 
 \begin{equation}
-\max_x ~ u_i \left( \omega_i - \int_0^x \left[ \frac{\beta}{n} + p_{i+2}(t) - p_{i+1}(t) \right] dt, x \right) 
+\max_x ~ u_i \left( \omega_i - \int_0^x \left[ \frac{c}{n} + p_{i+2}(t) - p_{i+1}(t) \right] dt, x \right) 
 \end{equation}
 
 \noindent The first order condition for utility maximization is: 
 
 \begin{align*}
-\frac{u_{i, x}}{u_{i, y_i}} &= \frac{\beta}{n} + p_{i+2}(x) - p_{i+1}(x) \numberthis \label{foc}
+\frac{u_{i, x}(y(x), x)}{u_{i, y_i}(y(x),x)} &= \frac{c}{n} + p_{i+2}(x) - p_{i+1}(x) \numberthis \label{foc}
 \end{align*}
 
-\noindent Remember that, even though the utility maximization problem was simplified into a choice over \(x\), the optimal level of the public good demanded \(x^*\) uniquely and implicity defines an optimal message \(p_j^*\) via the outcome function \ref{oc_x}: 
+\noindent Equation \ref{foc} states that in a Nash equilibrium a best responding individual submits a message \(p_i\) such that the level of the public good it implicitly demands is optimal given their personalized tax at the margin. If we assume that \(u_i\) is quasi-concave then \ref{foc} defines a global maximum, and we can state that a Nash equilibrium is individually rational for all players to accept. 
 
-\[
-x^* = \argmax_{t \geq 0} \int_o^t \left( p_j^*(m) + \sum_{i \neq j} p_i(m) \right) dm
-\]
-
-
-\noindent So, equation \ref{foc} states that in a Nash equilibrium a best responding individual submits a message \(p_i\) such that the level of the public good it implicitly demands is optimal given their personalized tax at the margin. If we assume that \(u_i\) is quasi-concave then \ref{foc} defines a global maximum, and we can state that a Nash equilibrium is individually rational for all players to accept. 
-
+Note that the best response message \(p_i\) is not unique. \ref{foc} only applies at a single point, the level of the public good provided.  This is true because the only feature of \(p_i\) relevant to utility maximization is where it dictates \(\sum_{i=1}^n p_i(x) = 0\). Consequently, this is also the only feature relevant to the achievement of a Nash equilibrium. Therefore, a best response \(p_i\) could be any integrable function that satisfies the point constraint \ref{foc}.
+ 
 The sum of all \(n\) first order conditions is 
 
-
 \begin{equation}
-\sum_{i=1}^n \frac{u_{i, x}}{u_{i, y_i}} = \beta
+\sum_{i=1}^n \frac{u_{i, x}(y(x), x)}{u_{i, y_i}(y(x), x)} = c
 \label{eq}
 \end{equation}
 
-\noindent The modulo dependence of the personalized taxes creates a cancellation that leads to two important results. First, the sum of all marginal rates of substitution are equal to the marginal cost of provision: the outcome is Pareto optimal. Second, the sum of all personalized taxes equals marginal cost at every marginal provision of the public good, so the cost of providing \(x\) will always be covered. 
+\noindent The modulo dependence of the personalized taxes creates a cancellation that leads the sum of all marginal rates of substitution are equal to the marginal cost of provision: the outcome is Pareto optimal. 
+
+The final qualification left to prove is that the cost of provision is covered. This is true via the construction of the personalized tax outcome function. No matter what messages are submitted, the sum of all tax schedules \(\tau_i\)equals marginal cost at every single margin. 
 
 Any Nash equilibrium of the game induced by our mechanism is a generalized Lindahl outcome: the outcome provides individualized tax schedules, covers the cost of provision of the public good, and is Pareto optimal and individually rational. This concludes the proof
+
+\end{proof}
+
+\begin{proposition}
+Any generalized Lindahl outcome \((\vec{\tau}, x)\) can be achieved in a Nash equilibrium of a game induced by the mechanism by a correspondence of \(\mathbf{p}\). 
+\end{proposition}
+
+\begin{proof}
+Suppose we have a generalized Lindahl outcome \((\vec{\tau}, x)\). Note that this means that \(x\) \textit{is} the Pareto optimal amount of the public good, so it is a best response for each individual to submit a message such that the outcome functions \ref{oc_x} and \ref{oc_t} provide \(x\). With this in mind, if we show that a profile of messages \(\mathbf{p}\) is capable of generating an outcome \((\vec{\tau}, x)\) via \ref{oc_x} and \ref{oc_t}, we have shown that the generalized Lindahl equilibrium that led to \ref{oc_x} and \ref{oc_t} is a Nash equilibrium in a game induced by the mechanism. 
+
+This proof again follows Walker (1981). From \ref{oc_x} and \ref{oc_t}, we can say we have the following system of \(n\) equations:
+
+\begin{align*}
+x &= \argmax_{t \geq 0} \int_o^t \sum_{i=1}^n p_i(m) dm \\
+\tau_n - \frac{c}{n} &= p_2 - p_1 \\
+\tau_1 - \frac{c}{n} &= p_3 - p_2 \\
+\tau_2 - \frac{c}{n} &= p_4 - p_3 \\
+&\vdots \\
+\tau_{n-2} - \frac{c}{n} &= p_n - p_{n-1} \\
+\end{align*}
+
+And now we are aided by the fact that a correspondence of \(\mathbf{p}\) is capable of producing a Nash equilibrium. The above system has \(n\) unknowns \(p_i\). To define a unique profile \(\mathbf{p}\) defined across all margins of the public good, we would need \(n\) linearly independent equations that provide structure across all such margins.This system only has \(n-1\) such equations: the functions \(\tau_i - \frac{c}{n} = p_{i+2} - p_{i+1}\). The \(n^{th}\) equation \(x = \argmax_{t \geq 0} \int_o^t \sum_{i=1}^n p_i(m) dm\) only has information on a single margin, the last margin provided. But, this is all the information that is needed to construct a correspondence of profiles \(\mathbf{p}\) that is capable of achieving a Nash equilibrium. Thus any generalized Lindahl equilibrium can be achieved in a Nash equilibrium of a game induced by the mechanism by a correspondence of \(\mathbf{p}\).
 
 \end{proof}
 
@@ -451,7 +469,7 @@ p_j =  \left( \sum_{i=1}^n \left( \frac{\beta_i}{\beta_j}\right)^\sigma \right)^
 Inside the brackets, add \(0 = v_j \left( \frac{\beta_j}{\beta_j}\right)^\sigma - v_j\) and rearrange to get:
 
 \begin{equation}
-p_j = c ~ \frac{\beta_j\strut^\sigma}{\sum_{i=1}^n \beta_i\strut^\sigma} + v_j - \frac{\beta_j\strut^\sigma}{\sum_{i=1}^n \beta_i\strut^\sigma}  \sum_{i =1}^n v_i 
+p_j =  v_j - \frac{\beta_j\strut^\sigma}{\sum_{i=1}^n \beta_i\strut^\sigma} \left[  \sum_{i =1}^n (v_i)  - c \right]
 \end{equation}
 
 
